--- a/config.yaml
+++ b/config.yaml
@@ -8,23 +8,26 @@
 # lc: Library Carpentry
 # cp: Carpentries (to use for instructor training for instance)
 # incubator: The Carpentries Incubator
-# 
+#
 # This option supports custom types so lessons can be branded
 # and themed with your own logo and alt-text (see `carpentry_description`)
 # See https://carpentries.github.io/sandpaper-docs/editing.html#adding-a-custom-logo
 carpentry: 'incubator'
 
 # Alt-text description of the lesson.
-carpentry_description: 'Lesson Description'
+carpentry_description: 'An introduction lesson to PRONOM and file format identification'
+
+# Organisation.
+organization_name: "Preservica, BYU, TNA, FFDev.info"
 
 # Overall title for pages.
-title: 'Lesson Title' # FIXME
+title: 'Searching for a signature: A file format identification workshop' # FIXME
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
 created: ~ # FIXME
 
 # Comma-separated list of keywords for the lesson
-keywords: 'software, data, lesson, The Carpentries' # FIXME
+keywords: 'PRONOM, DROID, Siegfried, FIDO, Format Identification, Digipres, Lesson'
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
@@ -34,7 +37,7 @@ life_cycle: 'pre-alpha' # FIXME
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/carpentries/workbench-template-md' # FIXME
+source: 'https://github.com/ross-spencer/testing-notes' # FIXME
 
 # Default branch of your lesson
 branch: 'main'
@@ -65,21 +68,36 @@ contact: 'team@carpentries.org' # FIXME
 # - another-learner.md
 
 # Order of episodes in your lesson
-episodes: 
+episodes:
 - introduction.md
+- hexadecimal.md
+- using-a-hex-editor.md
+- pronom-syntax.md
+- reversing-pronom-syntax.md
+- creating-signature-files.md
+- plugging-it-in.md
+- doing-it-for-yourself.md
+- teaching-us-how.md
+- advanced.md
 
-# Information for Learners
-learners: 
+# Information for Learners. The pages here will land in the introductory
+# sections.
+learners:
+- reference.md
+- additional.md
 
-# Information for Instructors
-instructors: 
+# Information for Instructors. The pages here will be included in the
+# instructor notes section.
+instructors:
 
 # Learner Profiles
-profiles: 
+profiles:
+- learner-profiles.md
+- instructor-profiles.md
 
 # Customisation ---------------------------------------------
 #
 # This space below is where custom yaml items (e.g. pinning
 # sandpaper and varnish versions) should live
 
-
+url: http://example.com
